<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:background="@color/card_color"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_20dp">

        <Button
            android:id="@+id/imgClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_dp"
            android:background="@drawable/ic_close"
            android:padding="@dimen/margin_20dp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/padding_10"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:text="@string/reset_msg1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/txt_color"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:text="@string/reset_msg2"
            android:textColor="@color/txt_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20dp"

            >

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/card_bg_light_radius_5"
                android:hint="@string/enter_email"
                android:maxLines="1"
                android:padding="@dimen/margin_20dp"
                android:textAlignment="center"
android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textStyle="bold" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            style="@style/MyCustomMaterialButton"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_20dp"
            android:onClick="loginWithEmail"
            android:padding="@dimen/margin_dp"
            android:text="@string/submit" />

    </LinearLayout>
