<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_corner_curve_bg"
    android:orientation="vertical"
    android:padding="@dimen/margin_20dp">


    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"

        android:background="@drawable/ic_close"
        android:padding="@dimen/margin_20dp" />

    <TextView
        android:id="@+id/maintxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/padding_10"

        android:text="@string/update_profile"
        android:textColor="@color/txt_color"
        android:textSize="22sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:hint="@string/hint_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="@dimen/margin_20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/txt_color" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/inputMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:hint="@string/mobile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:padding="@dimen/margin_20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/txt_color" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        style="@style/MyCustomMaterialButton"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_20dp"
        android:padding="@dimen/margin_10dp"
        android:text="@string/submit" />


</LinearLayout>