<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".contest.ContestCompleteActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_result_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:gravity="center"
                        android:text="@string/result"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/txt_color"
                         />

                    <include layout="@layout/lb_rank_lyt" />

                    <include layout="@layout/lyt_result_complete" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:orientation="vertical">


                <TextView

                    style="@style/MyTextViewButton"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:onClick="ShareScore"
                    android:padding="@dimen/margin_20dp"
                    android:text="@string/share_score" />

                <TextView

                    style="@style/MyTextViewButton"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:onClick="RateApp"
                    android:padding="@dimen/margin_20dp"
                    android:text="@string/rate_app" />

                <TextView

                    style="@style/MyTextViewButton"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:onClick="Home"
                    android:padding="@dimen/margin_20dp"
                    android:text="@string/home" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:visibility="gone" />


</RelativeLayout>
